# BCI-Mental-fatigue

./: .gitignore  README.md  dashboard.py  eeg_sim_example.py  load_features.py  main.py  pyproject.toml
eeg_simulator/: eeg_sim.py
eeg_simulator/datasets/: features.npy
ml/data/: __init__.py  dataset.py
ml/engines/: trainer.py
ml/models/: __init__.py  cnn_1d.py  eeg_mlp.py  eeg_net.py
scripts/: train.py  tune.py
txt_output to better understand/: 10_20151125_noon_eeg.txt  10_20151125_noon_eog.txt  10_20151125_noon_features.txt  10_20151125_noon_labels.txt  11_20151024_night_eeg.txt  11_20151024_night_eog.txt  11_20151024_night_features.txt  11_20151024_night_labels.txt  12_20150928_noon_eeg.txt  12_20150928_noon_eog.txt  12_20150928_noon_features.txt  12_20150928_noon_labels.txt  13_20150929_noon_eeg.txt  13_20150929_noon_eog.txt  13_20150929_noon_features.txt  13_20150929_noon_labels.txt  14_20151014_night_eeg.txt  14_20151014_night_eog.txt  14_20151014_night_features.txt  14_20151014_night_labels.txt  15_20151126_night_eeg.txt  15_20151126_night_eog.txt  15_20151126_night_features.txt  15_20151126_night_labels.txt  16_20151128_night_eeg.txt  16_20151128_night_eog.txt  16_20151128_night_features.txt  16_20151128_night_labels.txt  17_20150925_noon_eeg.txt  17_20150925_noon_eog.txt  17_20150925_noon_features.txt  17_20150925_noon_labels.txt  18_20150926_noon_eeg.txt  18_20150926_noon_eog.txt  18_20150926_noon_features.txt  18_20150926_noon_labels.txt  19_20151114_noon_eeg.txt  19_20151114_noon_eog.txt  19_20151114_noon_features.txt  19_20151114_noon_labels.txt  (+52 more)
(+90 files in other folders)
