[project]
name = "my_eeg_project"
version = "0.1.0"
description = "EEG-based Mental Fatigue Detection"
authors = [
    { name = "Didar"}
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["ml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
